--- a/index.html
+++ b/index.html
@@ -1230,6 +1230,7 @@
             <button class="mobile-menu-toggle" onclick="toggleMobileMenu()">☰</button>
             <ul class="navbar-menu" id="navbarMenu">
                 <li class="navbar-item"><a href="#hero" class="navbar-link">Главная</a></li>
+                <li class="navbar-item"><a href="accounts.html" class="navbar-link">Аккаунты</a></li>
                 <li class="navbar-item"><a href="#features" class="navbar-link">Функции</a></li>
                 <li class="navbar-item"><a href="#pricing" class="navbar-link">Тарифы</a></li>
                 <li class="navbar-item"><a href="#security" class="navbar-link">Безопасность</a></li>
